stage/ulNoActionsParser.java
// $ANTLR 3.0.1 ulNoActions.g 2018-02-22 16:49:06

        import AST.*;
        import Type.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class ulNoActionsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "TYPE", "INTEGERCONSTANT", "IF", "ELSE", "TRUE", "FALSE", "STRINGCONSTANT", "FLOATCONSTANT", "CHARACTERCONSTANT", "WS", "COMMENT", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "'='", "'while'", "'println'", "'print'", "'return'", "'=='", "'<'", "'+'", "'-'", "'*'"
    };
    public static final int CHARACTERCONSTANT=13;
    public static final int TRUE=9;
    public static final int FLOATCONSTANT=12;
    public static final int COMMENT=15;
    public static final int INTEGERCONSTANT=6;
    public static final int STRINGCONSTANT=11;
    public static final int ELSE=8;
    public static final int FALSE=10;
    public static final int ID=4;
    public static final int WS=14;
    public static final int EOF=-1;
    public static final int TYPE=5;
    public static final int IF=7;

        public ulNoActionsParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[33+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ulNoActions.g"; }


    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
            throws RecognitionException
    {
            reportError(e);
            throw e;
    }



    // $ANTLR start program
    // ulNoActions.g:35:1: program returns [Program prog] : (f= function )+ EOF ;
    public final Program program() throws RecognitionException {
        Program prog = null;

        Function f = null;



                prog = new Program();

        try {
            // ulNoActions.g:40:1: ( (f= function )+ EOF )
            // ulNoActions.g:40:3: (f= function )+ EOF
            {
            // ulNoActions.g:40:3: (f= function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ulNoActions.g:40:4: f= function
            	    {
            	    pushFollow(FOLLOW_function_in_program43);
            	    f=function();
            	    _fsp--;
            	    if (failed) return prog;
            	    if ( backtracking==0 ) {

            	              prog.addElement(f);
            	                    
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return prog;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program49); if (failed) return prog;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return prog;
    }
    // $ANTLR end program


    // $ANTLR start function
    // ulNoActions.g:46:1: function returns [Function f] : fd= functionDecl fb= functionBody ;
    public final Function function() throws RecognitionException {
        Function f = null;

        FunctionDeclaration fd = null;

        FunctionBody fb = null;


        try {
            // ulNoActions.g:47:9: (fd= functionDecl fb= functionBody )
            // ulNoActions.g:48:9: fd= functionDecl fb= functionBody
            {
            pushFollow(FOLLOW_functionDecl_in_function83);
            fd=functionDecl();
            _fsp--;
            if (failed) return f;
            pushFollow(FOLLOW_functionBody_in_function87);
            fb=functionBody();
            _fsp--;
            if (failed) return f;
            if ( backtracking==0 ) {
              f = new Function(fd, fb);
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return f;
    }
    // $ANTLR end function


    // $ANTLR start functionDecl
    // ulNoActions.g:52:1: functionDecl returns [ FunctionDeclaration functionDecl] : arrayType= compoundType identifier= ID '(' fp= formalParameters ')' ;
    public final FunctionDeclaration functionDecl() throws RecognitionException {
        FunctionDeclaration functionDecl = null;

        Token identifier=null;
        ArrayType arrayType = null;

        FormalParameter fp = null;


        try {
            // ulNoActions.g:53:9: (arrayType= compoundType identifier= ID '(' fp= formalParameters ')' )
            // ulNoActions.g:54:9: arrayType= compoundType identifier= ID '(' fp= formalParameters ')'
            {
            pushFollow(FOLLOW_compoundType_in_functionDecl135);
            arrayType=compoundType();
            _fsp--;
            if (failed) return functionDecl;
            identifier=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_functionDecl139); if (failed) return functionDecl;
            match(input,16,FOLLOW_16_in_functionDecl141); if (failed) return functionDecl;
            pushFollow(FOLLOW_formalParameters_in_functionDecl145);
            fp=formalParameters();
            _fsp--;
            if (failed) return functionDecl;
            match(input,17,FOLLOW_17_in_functionDecl147); if (failed) return functionDecl;
            if ( backtracking==0 ) {
              functionDecl = new FunctionDeclaration(arrayType, identifier.getText(), fp, identifier.getLine(), identifier.getCharPositionInLine() );
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return functionDecl;
    }
    // $ANTLR end functionDecl


    // $ANTLR start functionBody
    // ulNoActions.g:58:1: functionBody returns [FunctionBody functionbody] : '{' (varDe= varDecl )* (state= statement )* '}' ;
    public final FunctionBody functionBody() throws RecognitionException {
        FunctionBody functionbody = null;

        VariableDeclaration varDe = null;

        Statement state = null;



                functionbody = new FunctionBody();

        try {
            // ulNoActions.g:63:9: ( '{' (varDe= varDecl )* (state= statement )* '}' )
            // ulNoActions.g:64:9: '{' (varDe= varDecl )* (state= statement )* '}'
            {
            match(input,18,FOLLOW_18_in_functionBody199); if (failed) return functionbody;
            // ulNoActions.g:64:13: (varDe= varDecl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==TYPE) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // ulNoActions.g:64:14: varDe= varDecl
            	    {
            	    pushFollow(FOLLOW_varDecl_in_functionBody204);
            	    varDe=varDecl();
            	    _fsp--;
            	    if (failed) return functionbody;
            	    if ( backtracking==0 ) {

            	                functionbody.variableDeclarationList.varDecList.add(varDe);
            	              
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // ulNoActions.g:66:13: (state= statement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||(LA3_0>=INTEGERCONSTANT && LA3_0<=IF)||(LA3_0>=TRUE && LA3_0<=CHARACTERCONSTANT)||LA3_0==16||LA3_0==23||(LA3_0>=25 && LA3_0<=28)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // ulNoActions.g:66:14: state= statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody212);
            	    state=statement();
            	    _fsp--;
            	    if (failed) return functionbody;
            	    if ( backtracking==0 ) {

            	                if(state != null){
            	                  functionbody.statementList.stateList.add(state);
            	                }
            	              
            	    }

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            match(input,19,FOLLOW_19_in_functionBody217); if (failed) return functionbody;

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return functionbody;
    }
    // $ANTLR end functionBody


    // $ANTLR start compoundType
    // ulNoActions.g:76:1: compoundType returns [ArrayType arrayType] : t= TYPE ( '[' i= INTEGERCONSTANT ']' )? ;
    public final ArrayType compoundType() throws RecognitionException {
        ArrayType arrayType = null;

        Token t=null;
        Token i=null;

        try {
            // ulNoActions.g:77:9: (t= TYPE ( '[' i= INTEGERCONSTANT ']' )? )
            // ulNoActions.g:78:9: t= TYPE ( '[' i= INTEGERCONSTANT ']' )?
            {
            t=(Token)input.LT(1);
            match(input,TYPE,FOLLOW_TYPE_in_compoundType259); if (failed) return arrayType;
            // ulNoActions.g:78:16: ( '[' i= INTEGERCONSTANT ']' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==20) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // ulNoActions.g:78:17: '[' i= INTEGERCONSTANT ']'
                    {
                    match(input,20,FOLLOW_20_in_compoundType262); if (failed) return arrayType;
                    i=(Token)input.LT(1);
                    match(input,INTEGERCONSTANT,FOLLOW_INTEGERCONSTANT_in_compoundType267); if (failed) return arrayType;
                    match(input,21,FOLLOW_21_in_compoundType269); if (failed) return arrayType;

                    }
                    break;

            }

            if ( backtracking==0 ) {

                        String theType = t.getText();
                        Type subType = new IntegerType(); // boilerplate

                        if(theType.equals("int")) subType = new IntegerType();
                        else if (theType.equals("float")) subType = new FloatType(); 
                        else if (theType.equals("char")) subType = new CharType(); 
                        else if (theType.equals("string")) subType = new StringType(); 
                        else if (theType.equals("boolean")) subType = new BooleanType(); 
                        else if (theType.equals("void")) subType = new VoidType(); 

                        arrayType = new ArrayType(subType);
                        arrayType.line = t.getLine();
                        arrayType.pos = t.getCharPositionInLine();

                        if (i != null){ // If there is compound type
                          arrayType.compoundType = new IntegerLiteral(Integer.valueOf(i.getText()));
                        }
                      
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return arrayType;
    }
    // $ANTLR end compoundType


    // $ANTLR start formalParameters
    // ulNoActions.g:100:1: formalParameters returns [FormalParameter fp] : (ct= compoundType identifier= ID (mf= moreFormals )* )? ;
    public final FormalParameter formalParameters() throws RecognitionException {
        FormalParameter fp = null;

        Token identifier=null;
        ArrayType ct = null;

        FormalParameter mf = null;



                fp = new FormalParameter();

        try {
            // ulNoActions.g:105:9: ( (ct= compoundType identifier= ID (mf= moreFormals )* )? )
            // ulNoActions.g:105:11: (ct= compoundType identifier= ID (mf= moreFormals )* )?
            {
            // ulNoActions.g:105:11: (ct= compoundType identifier= ID (mf= moreFormals )* )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==TYPE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // ulNoActions.g:105:13: ct= compoundType identifier= ID (mf= moreFormals )*
                    {
                    pushFollow(FOLLOW_compoundType_in_formalParameters318);
                    ct=compoundType();
                    _fsp--;
                    if (failed) return fp;
                    if ( backtracking==0 ) {

                                if (ct != null){
                                  fp.arrayTypes.add(ct);
                                }

                              
                    }
                    identifier=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_formalParameters324); if (failed) return fp;
                    if ( backtracking==0 ) {

                                fp.identifiers.add(new Identifier(identifier.getText(), identifier.getLine(), identifier.getCharPositionInLine()));

                              
                    }
                    // ulNoActions.g:113:11: (mf= moreFormals )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==22) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // ulNoActions.g:113:13: mf= moreFormals
                    	    {
                    	    pushFollow(FOLLOW_moreFormals_in_formalParameters334);
                    	    mf=moreFormals();
                    	    _fsp--;
                    	    if (failed) return fp;
                    	    if ( backtracking==0 ) {

                    	                fp.arrayTypes.add(mf.arrayTypes.get(0));
                    	                fp.identifiers.add(mf.identifiers.get(0));
                    	              
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);


                    }
                    break;

            }


            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fp;
    }
    // $ANTLR end formalParameters


    // $ANTLR start moreFormals
    // ulNoActions.g:120:1: moreFormals returns [FormalParameter fp ] : ',' ct= compoundType identifier= ID ;
    public final FormalParameter moreFormals() throws RecognitionException {
        FormalParameter fp = null;

        Token identifier=null;
        ArrayType ct = null;


        try {
            // ulNoActions.g:121:9: ( ',' ct= compoundType identifier= ID )
            // ulNoActions.g:121:11: ',' ct= compoundType identifier= ID
            {
            match(input,22,FOLLOW_22_in_moreFormals371); if (failed) return fp;
            pushFollow(FOLLOW_compoundType_in_moreFormals375);
            ct=compoundType();
            _fsp--;
            if (failed) return fp;
            identifier=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_moreFormals379); if (failed) return fp;
            if ( backtracking==0 ) {

                        fp = new FormalParameter();
                        fp.arrayTypes.add(ct);
                        fp.identifiers.add(new Identifier(identifier.getText(), identifier.getLine(), identifier.getCharPositionInLine()));
                      
            }

            }

        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return fp;
    }
    // $ANTLR end moreFormals


    // $ANTLR start statement
    // ulNoActions.g:130:1: statement returns [Statement statement] options {backtrack=true; } : ( ';' | identifier= ID '=' e= expr ';' | identifier= ID '[' e1= expr ']' '=' e2= expr ';' | IF '(' e= expr ')' bl1= block ELSE bl2= block | IF '(' e= expr ')' bl= block | 'while' '(' e= expr ')' bl= block | 'println' e= expr ';' | 'print' e= expr ';' | e= expr ';' | 'return' ';' | 'return' e= expr ';' );
    public final Statement statement() throws RecognitionException {
        Statement statement = null;

        Token identifier=null;
        Expression e = null;

        Expression e1 = null;

        Expression e2 = null;

        Block bl1 = null;

        Block bl2 = null;

        Block bl = null;


        try {
            // ulNoActions.g:134:7: ( ';' | identifier= ID '=' e= expr ';' | identifier= ID '[' e1= expr ']' '=' e2= expr ';' | IF '(' e= expr ')' bl1= block ELSE bl2= block | IF '(' e= expr ')' bl= block | 'while' '(' e= expr ')' bl= block | 'println' e= expr ';' | 'print' e= expr ';' | e= expr ';' | 'return' ';' | 'return' e= expr ';' )
            int alt7=11;
            switch ( input.LA(1) ) {
            case 23:
                {
                alt7=1;
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (synpred2()) ) {
                    alt7=2;
                }
                else if ( (synpred3()) ) {
                    alt7=3;
                }
                else if ( (synpred9()) ) {
                    alt7=9;
                }
                else {
                    if (backtracking>0) {failed=true; return statement;}
                    NoViableAltException nvae =
                        new NoViableAltException("130:1: statement returns [Statement statement] options {backtrack=true; } : ( ';' | identifier= ID '=' e= expr ';' | identifier= ID '[' e1= expr ']' '=' e2= expr ';' | IF '(' e= expr ')' bl1= block ELSE bl2= block | IF '(' e= expr ')' bl= block | 'while' '(' e= expr ')' bl= block | 'println' e= expr ';' | 'print' e= expr ';' | e= expr ';' | 'return' ';' | 'return' e= expr ';' );", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case IF:
                {
                int LA7_3 = input.LA(2);

                if ( (synpred4()) ) {
                    alt7=4;
                }
                else if ( (synpred5()) ) {
                    alt7=5;
                }
                else {
                    if (backtracking>0) {failed=true; return statement;}
                    NoViableAltException nvae =
                        new NoViableAltException("130:1: statement returns [Statement statement] options {backtrack=true; } : ( ';' | identifier= ID '=' e= expr ';' | identifier= ID '[' e1= expr ']' '=' e2= expr ';' | IF '(' e= expr ')' bl1= block ELSE bl2= block | IF '(' e= expr ')' bl= block | 'while' '(' e= expr ')' bl= block | 'println' e= expr ';' | 'print' e= expr ';' | e= expr ';' | 'return' ';' | 'return' e= expr ';' );", 7, 3, input);

                    throw nvae;
                }
                }
                break;
            case 25:
                {
                alt7=6;
                }
                break;
            case 26:
                {
                alt7=7;
                }
                break;
            case 27:
                {
                alt7=8;
                }
                break;
            case INTEGERCONSTANT:
            case TRUE:
            case FALSE:
            case STRINGCONSTANT:
            case FLOATCONSTANT:
            case CHARACTERCONSTANT:
            case 16:
                {
                alt7=9;
                }
                break;
            case 28:
                {
                int LA7_14 = input.LA(2);

                if ( (synpred10()) ) {
                    alt7=10;
                }
                else if ( (true) ) {
                    alt7=11;
                }
                else {
                    if (backtracking>0) {failed=true; return statement;}
                    NoViableAltException nvae =
                        new NoViableAltException("130:1: statement returns [Statement statement] options {backtrack=true; } : ( ';' | identifier= ID '=' e= expr ';' | identifier= ID '[' e1= expr ']' '=' e2= expr ';' | IF '(' e= expr ')' bl1= block ELSE bl2= block | IF '(' e= expr ')' bl= block | 'while' '(' e= expr ')' bl= block | 'println' e= expr ';' | 'print' e= expr ';' | e= expr ';' | 'return' ';' | 'return' e= expr ';' );", 7, 14, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return statement;}
                NoViableAltException nvae =
                    new NoViableAltException("130:1: statement returns [Statement statement] options {backtrack=true; } : ( ';' | identifier= ID '=' e= expr ';' | identifier= ID '[' e1= expr ']' '=' e2= expr ';' | IF '(' e= expr ')' bl1= block ELSE bl2= block | IF '(' e= expr ')' bl= block | 'while' '(' e= expr ')' bl= block | 'println' e= expr ';' | 'print' e= expr ';' | e= expr ';' | 'return' ';' | 'return' e= expr ';' );", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // ulNoActions.g:134:13: ';'
                    {
                    match(input,23,FOLLOW_23_in_statement428); if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = null;

                                  
                    }

                    }
                    break;
                case 2 :
                    // ulNoActions.g:138:13: identifier= ID '=' e= expr ';'
                    {
                    identifier=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_statement448); if (failed) return statement;
                    match(input,24,FOLLOW_24_in_statement450); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement454);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,23,FOLLOW_23_in_statement456); if (failed) return statement;
                    if ( backtracking==0 ) {

                                    VariableAssignment varAssignment = new VariableAssignment(new Identifier(identifier.getText(), identifier.getLine(), identifier.getCharPositionInLine()), e);
                                    statement = new AssignmentStatement(varAssignment);
                                  
                    }

                    }
                    break;
                case 3 :
                    // ulNoActions.g:142:13: identifier= ID '[' e1= expr ']' '=' e2= expr ';'
                    {
                    identifier=(Token)input.LT(1);
                    match(input,ID,FOLLOW_ID_in_statement476); if (failed) return statement;
                    match(input,20,FOLLOW_20_in_statement478); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement482);
                    e1=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,21,FOLLOW_21_in_statement484); if (failed) return statement;
                    match(input,24,FOLLOW_24_in_statement486); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement490);
                    e2=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,23,FOLLOW_23_in_statement492); if (failed) return statement;
                    if ( backtracking==0 ) {

                                     ArrayAssignment arrayAssignment = new ArrayAssignment(new Identifier(identifier.getText(), identifier.getLine(), identifier.getCharPositionInLine()), e1, e2);
                                    statement = new AssignmentStatement(arrayAssignment);
                                  
                    }

                    }
                    break;
                case 4 :
                    // ulNoActions.g:146:13: IF '(' e= expr ')' bl1= block ELSE bl2= block
                    {
                    match(input,IF,FOLLOW_IF_in_statement515); if (failed) return statement;
                    match(input,16,FOLLOW_16_in_statement517); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement521);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,17,FOLLOW_17_in_statement523); if (failed) return statement;
                    pushFollow(FOLLOW_block_in_statement527);
                    bl1=block();
                    _fsp--;
                    if (failed) return statement;
                    match(input,ELSE,FOLLOW_ELSE_in_statement529); if (failed) return statement;
                    pushFollow(FOLLOW_block_in_statement533);
                    bl2=block();
                    _fsp--;
                    if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = new IfStatement(e,bl1,bl2);
                                  
                    }

                    }
                    break;
                case 5 :
                    // ulNoActions.g:149:13: IF '(' e= expr ')' bl= block
                    {
                    match(input,IF,FOLLOW_IF_in_statement564); if (failed) return statement;
                    match(input,16,FOLLOW_16_in_statement566); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement570);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,17,FOLLOW_17_in_statement572); if (failed) return statement;
                    pushFollow(FOLLOW_block_in_statement576);
                    bl=block();
                    _fsp--;
                    if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = new IfStatement(e,bl);
                                  
                    }

                    }
                    break;
                case 6 :
                    // ulNoActions.g:152:13: 'while' '(' e= expr ')' bl= block
                    {
                    match(input,25,FOLLOW_25_in_statement595); if (failed) return statement;
                    match(input,16,FOLLOW_16_in_statement597); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement601);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,17,FOLLOW_17_in_statement603); if (failed) return statement;
                    pushFollow(FOLLOW_block_in_statement607);
                    bl=block();
                    _fsp--;
                    if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = new WhileStatement(e,bl);
                                  
                    }

                    }
                    break;
                case 7 :
                    // ulNoActions.g:155:13: 'println' e= expr ';'
                    {
                    match(input,26,FOLLOW_26_in_statement626); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement630);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,23,FOLLOW_23_in_statement632); if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = new PrintLnStatement(e);
                                  
                    }

                    }
                    break;
                case 8 :
                    // ulNoActions.g:158:13: 'print' e= expr ';'
                    {
                    match(input,27,FOLLOW_27_in_statement662); if (failed) return statement;
                    pushFollow(FOLLOW_expr_in_statement666);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,23,FOLLOW_23_in_statement668); if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = new PrintStatement(e);
                                  
                    }

                    }
                    break;
                case 9 :
                    // ulNoActions.g:161:13: e= expr ';'
                    {
                    pushFollow(FOLLOW_expr_in_statement691);
                    e=expr();
                    _fsp--;
                    if (failed) return statement;
                    match(input,23,FOLLOW_23_in_statement694); if (failed) return statement;
                    if ( backtracking==0 ) {

                                    statement = new ExpressionStatement(e);
                                  
                    }
